Changed Hello World with img and h2 to display simple profile data. Image file added in the folder images and used as resource in the img element in index.html file

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     </head>
 
     <body>
-        Hello Word
+        <div>
+            <img src="images/gedungmerdeka.jpg" alt="Gedung Merdeka">
+            <h2> Rifqi Pratama </h2>
+        </div>
     </body>
 </html>
