Added ids for each profile element

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
 
     <body>
-        <div>
+        <div id="profile-container">
             <img src="images/gedungmerdeka.jpg" alt="Gedung Merdeka">
             <h2> Rifqi Pratama </h2>
         </div>
