Added initial style.css to style the profile

--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 
 <html>
     <head>  
-
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
         <div id="profile-container">
-            <img src="images/gedungmerdeka.jpg" alt="Gedung Merdeka">
-            <h2> Rifqi Pratama </h2>
+            <img id="profile-image" src="images/gedungmerdeka.jpg" alt="Gedung Merdeka">
+            <h2 id="profile-name"> Rifqi Pratama </h2>
         </div>
     </body>
 </html>
