--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     </head>
 
     <body>
+        <div id="header">Header</div>
         <div id="profile-container">
             <img id="profile-image" src="images/gedungmerdeka.jpg" alt="Gedung Merdeka">
             <h2 id="profile-name"> Rifqi Pratama </h2>
