--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
             <img id="profile-image" src="images/gedungmerdeka.jpg" alt="Gedung Merdeka">
             <h2 id="profile-name"> Rifqi Pratama </h2>
         </div>
+        <div id="footer">Footer</div>
     </body>
 </html>
