add in id=profile-job in index.html and style

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <div id="profile-container">
             <img id="profile-image" src="images/gedungmerdeka.jpg" alt="Gedung Merdeka">
             <h2 id="profile-name"> Rifqi Pratama </h2>
+            <p id="profile-job">Software Engineer </p>
         </div>
         <div id="footer">Footer</div>
     </body>
